[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Turret/turret_rifle.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Turret/Turret.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Turret/TurretBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Turret/turret_base.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="CircleShape2D" id=2]
radius = 600.0

[node name="Turret" type="StaticBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
TurretBullet = ExtResource( 3 )

[node name="BaseSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Rifle" type="Node2D" parent="."]

[node name="BulletPosition" type="Position2D" parent="Rifle"]
position = Vector2( 87, 0 )

[node name="RifleSprite" type="Sprite" parent="Rifle"]
position = Vector2( 16, 0 )
texture = ExtResource( 1 )

[node name="RayCast" type="RayCast2D" parent="Rifle"]
position = Vector2( 87, 0 )
enabled = true
cast_to = Vector2( 500, 0 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EngageArea" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="EngageArea"]
shape = SubResource( 2 )

[node name="CooldownTimer" type="Timer" parent="."]
[connection signal="body_entered" from="EngageArea" to="." method="_on_EngageArea_body_entered"]
[connection signal="body_exited" from="EngageArea" to="." method="_on_EngageArea_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
